# ChangeLog

Tue, 28 Feb 2023 17:24:07 -0700 v1.8.2

- fix LWT online/offline status updates of Daemon
- repair MQTT command subscription mechanism
- repaired the remote-control setup instructions for restart-service, updated config.ini.dist

Sun Feb 26 18:28:36 2023 -0700 v1.8.1

- Repair temperature units regression (#82)
- Disk Used sensor repaired (was reporting free vs. used) (#83)
- Refine the advertisement of the command endpoints

Sat, 25 Feb 2023 19:36:42 -0700 v1.8.0

- Update README.md and requirements.txt to reflect use of Python `apt` library
- Add reporting of pending os updates (#71) See `ux_updates`
- Adjust cpu temp reporting to fall back to proc filesystem when vcgencmd not present (#72)
- Add reporting uptime in seconds (#53) See `up_time_secs`
- Incorporate network usage from @mcarlosro (#47) See `tx_data` and `rx_data` for each network IF
- Incorporate remote restart from @hobbypunk90 (#77, #80). Docs in README
- Add new RMTECTRL.md advising on how to set up control over your RPi

Sat, 18 Feb 2023 15:36:08 -0700 v1.7.4

- Update README.md and requirements.txt to reflect use of Python `requests` library (#78)

Sat, 18 Feb 2023 14:22:52 -0700 v1.7.3

- Add `fs_disk_used` value
- Correct Disk Used % sensor to use "used" vs. "free" value
- Convert memory values from floting point string to integer (precision not necessary)
- Add new Mem Used % sensor (#42)

Sat, 11 Feb 2023 14:28:59 -0700 v1.7.2

- Repair fetch of versions, now every 12 hours

Fri, 10 Feb 2023 17:27:06 -0700 v1.7.1

- Fix internal release number
- Forward formal releases via MQTT

Tue, 17 Aug 2022 18:37:21 -0600 v1.6.2

- (#63) Fix path to cut(1) command
- (#61) add filter to prevent df reporting "No such device or address" from breaking the script

Tue, 02 Aug 2022 18:37:21 -0600 v1.6.1

- Fix 'bullseye' name determination - remove extra sources output

Thu, 02 Dec 2021 16:36:15 -0600 v1.6.0

- Merged 4 pull requests:
  - Adjusted GetLastUpdateDate() to work on Arch Linux (#32)